--- a/style.css
+++ b/style.css
@@ -1,16 +1,35 @@
-h3{
-font-size: 25px !important;
+body{
+background-color: rgb(148, 148, 250);
 }
-.btn-success:hover{
-background-color: rgb(47, 255, 75);
-}
-canvas{
-animation-name: example;
-animation-duration: 4s;
-animation-iteration-count: infinite;
-}
-@keyframes example{
-from{box-shadow:1px 1px 38px red}
-to{box-shadow:1px 1px 38px orange}
-to{box-shadow:1px 1px 38px yellow}
-}
+h1{
+    color: black;
+    background-color: rgba(170, 170, 170, 0.564);
+    }
+    #show_sketch{
+    float: right;
+    }
+    canvas{
+    border: 5px solid white;
+    border-radius: 20px;
+    animation-name: example;
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+    margin-top: 80px;
+    }
+    @keyframes example{
+    from{box-shadow: 1px 1px 38px rgba(0, 0, 255, 0.722)}
+    to{box-shadow: 1px 1px 38px rgba(23, 23, 141, 0.722)}
+    }
+    p{
+    padding-top: 10px;
+    font-size: 25px;
+    }
+    #score{
+    font-size: 35px;
+    margin-left: 20px;
+    }
+    #time{
+    font-size: 35px;
+    margin-right: 20px;
+    float: right;
+    }
